# metaMCU_templateF407Project

./: .gitmodules  CMakeLists.txt  LICENSE
device/Firmware_AT32F407_403/: CMakeLists.txt
device/metaMCU_AT32F407/: CMakeLists.txt
device/metaMCU_AT32F407/AT32F407xx_v2/: adc1registers.hpp  adc3registers.hpp  bprregisters.hpp  can2registers.hpp  crmregisters.hpp  dacregisters.hpp  debugregisters.hpp  dma1registers.hpp  ethernetdmaregisters.hpp  ethernetmmcregisters.hpp  ethernetptpregisters.hpp  exintregisters.hpp  gpiobregisters.hpp  gpiocregisters.hpp  gpiodregisters.hpp  gpioeregisters.hpp  i2c2registers.hpp  iomuxregisters.hpp  pwcregisters.hpp  rtcregisters.hpp  sdio1registers.hpp  spi1registers.hpp  spi3registers.hpp  spi4registers.hpp  tmr11registers.hpp  tmr13registers.hpp  tmr14registers.hpp  tmr1registers.hpp  tmr5registers.hpp  tmr6registers.hpp  tmr9registers.hpp  uart7registers.hpp  uart8registers.hpp  usart6registers.hpp  usbfsregisters.hpp  xmcregisters.hpp
device/metaMCU_AT32F407/platform/: interface.hpp
devices/metaMCU_AT32F407/: CMakeLists.txt
devices/metaMCU_AT32F407/AT32F407xx_v2/: accregisters.hpp  adc1registers.hpp  adc2registers.hpp  can1registers.hpp  crcregisters.hpp  dma2registers.hpp  ethernetmacregisters.hpp  flashregisters.hpp  gpioaregisters.hpp  i2c1registers.hpp  i2c3registers.hpp  i2s2extregisters.hpp  i2s3extregisters.hpp  nvicregisters.hpp  sdio2registers.hpp  spi2registers.hpp  tmr10registers.hpp  tmr12registers.hpp  tmr2registers.hpp  tmr3registers.hpp  tmr4registers.hpp  tmr7registers.hpp  tmr8registers.hpp  uart4registers.hpp  uart5registers.hpp  usart1registers.hpp  usart2registers.hpp  usart3registers.hpp  wdtregisters.hpp  wwdtregisters.hpp
devices/metaMCU_AT32F407/Firmware/: CMakeLists.txt
devices/metaMCU_AT32F407/platform/: arterypin.hpp
include/: configuration.h  syscall.h
src/: main.cpp
