cmake_minimum_required(VERSION 3.14)

project(metaMCU_AT32F407
VERSION 0.0.1
DESCRIPTION "metaMCU AT32F407 package")

enable_language(CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
    
set(REGISTERS_DIRECTORIES
	${CMAKE_CURRENT_SOURCE_DIR}/AT32F407xx_v2
	${CMAKE_CURRENT_SOURCE_DIR}/platform
	)

add_library(metaMCU_AT32F407 INTERFACE)
add_library(metaMCU::AT32F407 ALIAS metaMCU_AT32F407)

target_link_libraries(metaMCU_AT32F407 INTERFACE metaMCU)
target_include_directories(metaMCU_AT32F407 INTERFACE ${REGISTERS_DIRECTORIES})
